--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -178,6 +178,59 @@
   "role.code" : "Mã vai trò",
   "role.function": "Chức năng vai trò",
   "role.manage": "Quản lý",
+  "role.note": "Ghi chú",
+  "role.permission": "Phân quyền",
+
+  "role.contract.list": "Nhóm chức năng quản lý hợp đồng",
+  "role.contract.add": "Thêm mới hợp đồng đơn lẻ",
+  "role.contract.edit": "Sửa hợp đồng",
+  "role.contract.view": "Xem danh sách hợp đồng của tổ chức của tôi và tổ chức con",
+  "role.contract.view.org": "Xem danh sách hợp đồng của tổ chức của tôi",
+  "role.contract.view.me": "Xem danh sách hợp đồng của tôi",
+  "role.contract.filter": "Tìm kiếm hợp đồng",
+  "role.contract.view.detail": "Xem thông tin chi tiết hợp đồng",
+  "role.contract.copy": "Sao chép hợp đồng",
+  "role.contract.cancel": "Huỷ hợp đồng",
+  "role.contract.view.history": "Xem lịch sử hợp đồng",
+  "role.contract.create.connect": "Tạo hợp đồng liên quan",
+  "role.contract.view.connect": "Xem hợp đồng liên quan",
+  "role.contract.share": "Chia sẻ hợp đồng",
+
+  "role.contract-template.list": "Nhóm chức năng quản lý mẫu hợp đồng",
+  "role.contract-template.add": "Thêm mới mẫu hợp đồng",
+  "role.contract-template.edit": "Sửa mẫu hợp đồng",
+  "role.contract-template.create-contract": "Tạo hợp đồng đơn lẻ theo mẫu",
+  "role.contract-template.create-batch": "Tạo hợp đồng theo lô",
+  "role.contract-template.stop": "Ngừng phát hành mẫu hợp đồng",
+  "role.contract-template.start": "Phát hành mẫu hợp đồng",
+  "role.contract-template.share": "Chia sẻ mẫu hợp đồng",
+  "role.contract-template.filter": "Tìm kiếm mẫu hợp đồng",
+  "role.contract-template.delete": "Xóa mẫu hợp đồng",
+  "role.contract-template.view.detail": "Xem thông tin chi tiết mẫu hợp đồng",
+
+  "role.unit.list": "Nhóm chức năng quản lý tổ chức",
+  "role.unit.add": "Thêm mới tổ chức",
+  "role.unit.edit": "Sửa tổ chức",
+  "role.unit.filter": "Tìm kiếm tổ chức",
+  "role.unit.view.detail": "Xem thông tin chi tiết tổ chức",
+
+  "role.user.list": "Nhóm chức năng quản lý người dùng",
+  "role.user.add": "Thêm mới người dùng",
+  "role.user.edit": "Sửa người dùng",
+  "role.user.filter": "Tìm kiếm người dùng",
+  "role.user.view.detail": "Xem thông tin chi tiết người dùng",
+
+  "role.list.v2": "Nhóm chức năng quản lý vai trò",
+  "role.edit": "Sửa vai trò",
+  "role.filter": "Tìm kiếm vai trò",
+  "role.view.detail": "Xem thông tin chi tiết vai trò",
+
+  "role.contract-type.list": "Nhóm chức năng quản lý loại hợp đồng",
+  "role.contract-type.add": "Thêm mới loại hợp đồng",
+  "role.contract-type.edit": "Sửa loại hợp đồng",
+  "role.contract-type.delete": "Xóa loại hợp đồng",
+  "role.contract-type.filter": "Tìm kiếm loại hợp đồng",
+  "role.contract-type.view.detail": "Xem thông tin chi tiết loại hợp đồng",
 
   "contract-type.list": "Danh sách loại hợp đồng",
   "contract-type.add": "Thêm mới loại hợp đồng",
@@ -208,6 +261,9 @@
   "error.user.sign-type.required": "Loại ký không được để trống",
   "error.user.phone.required": "Số điện thoại không được để trống",
   "error.user.phone.format": "Số điện thoại sai định dạng",
+  "error.role.name.required": "Tên vai trò không được để trống",
+  "error.role.code.required": "Mã vai trò không được để trống",
+  "error.role.permission.required": "Phân quyền không được để trống",
 
   "error.partner.name.required": "Tên đối tác không được để trống",
 
@@ -240,6 +296,7 @@
   "btn.add.partner": "Thêm đối tác",
 
   "view.all": "Xem thêm",
+  "no.role": "Bạn không có quyền thực hiện tác vụ này!",
   "no.list" : "Danh sách thông báo",
   "no.contract.add.close": "Hợp đồng chưa hoàn thành. Bạn có muốn lưu bản nháp không?",
   "no.update.information.success": "Cập nhật thông tin thành công",
