--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -178,6 +178,59 @@
   "role.code" : "Role code",
   "role.function": "Role detail",
   "role.manage": "Manage",
+  "role.note": "Note",
+  "role.permission": "Permission",
+
+  "role.contract.list": "Contract management",
+  "role.contract.add": "Add contract",
+  "role.contract.edit": "Edit contract",
+  "role.contract.view": "View list of contracts for my organization and its suborganization",
+  "role.contract.view.org": "View list of contracts for my organization",
+  "role.contract.view.me": "View list of contracts for its suborganization",
+  "role.contract.filter": "Search contract",
+  "role.contract.view.detail": "View contract details",
+  "role.contract.copy": "Copy contract",
+  "role.contract.cancel": "Cancel contract",
+  "role.contract.view.history": "View contract history",
+  "role.contract.create.connect": "Create related contract",
+  "role.contract.view.connect": "See related contract",
+  "role.contract.share": "Share contract",
+
+  "role.contract-template.list": "Contract template management",
+  "role.contract-template.add": "Add contract template",
+  "role.contract-template.edit": "Edit contract template",
+  "role.contract-template.create-contract": "Create contract by template",
+  "role.contract-template.create-batch": "Create batch contracts",
+  "role.contract-template.stop": "Stop releasing contract templates",
+  "role.contract-template.start": "Release of contract form",
+  "role.contract-template.share": "Share contract template",
+  "role.contract-template.filter": "Search contract template",
+  "role.contract-template.delete": "Delete contract template",
+  "role.contract-template.view.detail": "View contract template detail",
+
+  "role.unit.list": "Organizational management",
+  "role.unit.add": "Add organization",
+  "role.unit.edit": "Edit organization",
+  "role.unit.filter": "Search organization",
+  "role.unit.view.detail": "View organization details",
+
+  "role.user.list": "User management",
+  "role.user.add": "Add user",
+  "role.user.edit": "Edit user",
+  "role.user.filter": "Search user",
+  "role.user.view.detail": "View user details",
+
+  "role.list.v2": "Role management",
+  "role.edit": "Edit role",
+  "role.filter": "Search role",
+  "role.view.detail": "View role details",
+
+  "role.contract-type.list": "Contract type management",
+  "role.contract-type.add": "Add contract type",
+  "role.contract-type.edit": "Edit contract type",
+  "role.contract-type.delete": "Delete contract type",
+  "role.contract-type.filter": "Search contract type",
+  "role.contract-type.view.detail": "View contract type details",
 
   "contract-type.list": "Contract type list",
   "contract-type.add": "Add contract type",
@@ -208,6 +261,9 @@
   "error.user.sign-type.required": "Sign type is required",
   "error.user.phone.required": "Phone number is required",
   "error.user.phone.format": "Invalid phone number",
+  "error.role.name.required": "Role name is required",
+  "error.role.code.required": "Role code is required",
+  "error.role.permission.required": "Permission is required",
 
   "error.partner.name.required": "Partner is required",
 
@@ -240,6 +296,7 @@
   "btn.add.partner": "Add partner",
 
   "view.all": "View all",
+  "no.role": "You do not have permission to perform this action!",
   "no.list" : "List notification",
   "no.contract.add.close": "The contract has not been completed. Do you want to save the draft?",
   "no.update.information.success": "Updated successfully",
