--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -288,6 +288,7 @@
   "btn.cancel": "Hủy bỏ",
   "btn.accept": "Đồng ý",
   "btn.share": "Chia sẻ",
+  "btn.delete": "Xóa",
   "btn.add.user.view": "Thêm người xem xét",
   "btn.add.user.sign": "Thêm người ký",
   "btn.add.user.lead": "Thêm người điều phối",
