--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,12 +107,22 @@
   "contract.sign-refused": "Refused to sign",
   "contract.document-refused": "Refused to document",
 
+  "contract-template": "Contract template",
   "contract-template.list": "List of contract templates",
   "contract-template.create": "Contract template created",
   "contract-template.share": "Contract template shared",
   "contract-template.name": "Contract template name",
+  "contract-template.file": "Contract template file",
   "contract-template.type": "Contract template type",
   "contract-template.code": "Contract template code",
+  "effective-date": "Effective date",
+  "effective-start-date": "Effective start date",
+  "effective-end-date": "Effective end date",
+  "contract-template.information": "Contract template information",
+  "contract-template.identify-signer": "Identify signer",
+  "contract-template.design": "Design",
+  "contract-template.confirm": "Confirm",
+  "contract-template.add": "Add contract template",
 
   "file.document": "File",
   "choose": "Choose",
