compare start date and end date

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,6 +141,7 @@
   "chart.contract.created": "Statistical chart of the number of contracts created",
   "chart.number": "Quantity",
 
+  "side.sign": "Side sign",
   "action": "Action",
   "user.view": "Viewer",
   "user.sign": "Signer",
@@ -273,12 +274,18 @@
   "error.role.name.required": "Role name is required",
   "error.role.code.required": "Role code is required",
   "error.role.permission.required": "Permission is required",
+  "error.contract-template.name.required": "Contract template name is required",
+    "error.contract-template.code.required": "Contract template code is required",
+    "error.contract-template.effective-start-date": "Effective start date is required",
+    "error.contract-template.effective-end-date": "Effective end date is required",
+    "error.contract-template.effective-end-date.compare": "End date must not be less than start date",
 
   "error.partner.name.required": "Partner is required",
 
   "personal": "Personal",
   "organization" : "Organization",
   "organization.me": "My organization",
+  "organization.partner": "Partner",
   "organization.partner.name": "Partner name",
   "scale": "Scale",
   "address": "Address",
@@ -299,6 +306,7 @@
   "btn.accept": "Accept",
   "btn.share": "Share",
   "btn.delete": "Delete",
+  "btn.done": "Done",
   "btn.add.user.view": "Add viewer",
   "btn.add.user.sign": "Add signer",
   "btn.add.user.lead": "Add leader",
