--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -116,8 +116,8 @@
     "contract-template.type": "Loại mẫu hợp đồng",
     "contract-template.code": "Mã mẫu hợp đồng",
     "effective-date": "Thời gian hiệu lực",
-    "effective-start-date": "Hiệu lực từ ngày",
-    "effective-end-date": "Hiệu lực đến ngày",
+    "effective-start-date": "Ngày bắt đầu hiệu lực",
+    "effective-end-date": "Ngày kết thúc hiệu lực",
     "contract-template.information": "Thông tin mẫu hợp đồng",
     "contract-template.identify-signer": "Xác định người ký",
     "contract-template.design": "Thiết kế mẫu hợp đồng",
@@ -141,6 +141,7 @@
     "chart.contract.created": "Biểu đồ thống kê số lượng hợp đồng tạo",
     "chart.number": "Số lượng",
 
+    "side.sign": "Các bên ký",
     "action": "Thao tác",
     "user.view": "Người xem xét",
     "user.sign": "Người ký",
@@ -273,12 +274,18 @@
     "error.role.name.required": "Tên vai trò không được để trống",
     "error.role.code.required": "Mã vai trò không được để trống",
     "error.role.permission.required": "Phân quyền không được để trống",
+    "error.contract-template.name.required": "Tên mẫu hợp đồng không được để trống",
+    "error.contract-template.code.required": "Mã mẫu hợp đồng không được để trống",
+    "error.contract-template.effective-start-date": "Ngày bắt đầu hiệu lực không được để trống",
+    "error.contract-template.effective-end-date": "Ngày kết thúc hiệu lực đến ngày không được để trống",
+    "error.contract-template.effective-end-date.compare": "Ngày kết thúc không được nhỏ hơn ngày bắt đầu",
 
     "error.partner.name.required": "Tên đối tác không được để trống",
 
     "personal": "Cá nhân",
     "organization": "Tổ chức",
     "organization.me": "Tổ chức của tôi",
+    "organization.partner": "Đối tác",
     "organization.partner.name": "Tên đối tác",
     "scale": "Quy mô",
     "address": "Địa chỉ",
@@ -299,6 +306,7 @@
     "btn.accept": "Đồng ý",
     "btn.share": "Chia sẻ",
     "btn.delete": "Xóa",
+    "btn.done": "Hoàn thành",
     "btn.add.user.view": "Thêm người xem xét",
     "btn.add.user.sign": "Thêm người ký",
     "btn.add.user.lead": "Thêm người điều phối",
