--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -353,6 +353,7 @@
     "sign.efective-time": "Sign efective time",
     "sign.organization": "Organization",
     "sign.time.valid": "Sign time valid",
+    "sign.file.no": "No sign",
 
     "sys.processing": "Processing",
 
