--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -353,6 +353,7 @@
     "sign.efective-time": "Thời gian hiệu lực của chứng thư số",
     "sign.organization": "Đơn vị cấp chứng thư số",
     "sign.time.valid": "Ký trong thời gian hợp lệ",
+    "sign.file.no": "File không có chữ ký số",
 
     "sys.processing": "Đang xử lý",
 
