--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -389,5 +389,6 @@
     "have_version_app_mobile": "There is a mobile version available.",
     "please_openApp_or_download": "Please visit or download the application to continue using the service.",
     "open_app": "Open app",
-    "download_app": "Download app"
+    "download_app": "Download app",
+    "contract_signature_success": "The contract has been processed!"
 }
