--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -390,5 +390,6 @@
     "please_openApp_or_download": "Vui lòng truy cập hoặc tải ứng dụng để tiếp tục sử dụng dịch vụ.",
     "open_app": "Mở app",
     "download_app": "Tải app",
-    "contract_signature_success": "Hợp đồng đã được xử lý!"
+    "contract_signature_success": "Hợp đồng đã được xử lý!",
+    "error_check_signature": "Lỗi kiểm tra chữ ký!"
 }
