--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -363,5 +363,6 @@
   "download_app": "Download app",
   "contract_signature_success": "The contract has been processed!",
   "error_check_signature": "Signature check error!",
-  "error_change_contract_template": "Sample contract change data error, Please cancel the contract and rework again!"
+  "error_change_contract_template": "Sample contract change data error, Please cancel the contract and rework again!",
+  "error_delete_object_signature": "cannot delete change data, please try again!"
 }
