--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -365,5 +365,6 @@
   "error_check_signature": "Signature check error!",
   "error_change_contract_template": "Sample contract change data error, Please cancel the contract and rework again!",
   "error_delete_object_signature": "cannot delete change data, please try again!",
-  "contract_number_already_exist": "contract number already exist!"
+  "contract_number_already_exist": "contract number already exist!",
+  "notify_have_not_sign_acc": "You don't have a signed photo from your account!"
 }
