--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -367,5 +367,6 @@
   "error_delete_object_signature": "cannot delete change data, please try again!",
   "contract_number_already_exist": "contract number already exist!",
   "notify_have_not_sign_acc": "You don't have a signed photo from your account!",
-  "contract_processing_flow": "Contract processing flow"
+  "contract_processing_flow": "Contract processing flow",
+  "not_search_file_attach": "Attached file not found, please check again!"
 }
