--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -368,5 +368,7 @@
   "contract_number_already_exist": "Số hợp đồng đã tồn tại!",
   "notify_have_not_sign_acc": "Bạn chưa có ảnh ký từ tài khoản!",
   "contract_processing_flow": "LUỒNG XỬ LÝ HỢP ĐỒNG",
-  "not_search_file_attach": "Không tìm thấy file đính kèm, vui lòng kiểm tra lại!"
+  "not_search_file_attach": "Không tìm thấy file đính kèm, vui lòng kiểm tra lại!",
+  "typeOfSignEmail":"Đăng nhập bằng email",
+  "typeOfSignPhone":"Đăng nhập bằng số điện thoại"
 }
