--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -327,36 +327,36 @@
   "sign.time.valid": "Sign time valid",
   "sign.file.no": "No sign",
   "sys.processing": "Processing",
-  "nhap_sdt": "Nhập số điện thoại",
-  "to_chuc_cua_toi": "TỔ CHỨC CỦA TÔI",
-  "note_chon_loai_ki_so": "Lưu ý: bạn chỉ được phép chọn 1 kiểu ký số!",
-  "doi_tac": "Đối tác",
-  "xoa_doi_tac_to_chuc": "Xóa đối tác tổ chức",
-  "xoa_doi_tac_ca_nhan": "Xóa đối tác cá nhân",
-  "them_doi_tac": "Thêm đối tác",
-  "nhap_email": "Nhập email",
-  "nhap_ho_va_ten": "Nhập họ và tên",
-  "nhap_ten_doi_tac_to_chuc": "Nhập tên đối tác tổ chức...",
-  "valid_trung_email": "Địa chỉ email không được trùng nhau giữa các bên tham gia!",
+  "nhap_sdt": "Enter phone",
+  "to_chuc_cua_toi": "My organization",
+  "note_chon_loai_ki_so": "Warning: You only choose one type of digital sign!",
+  "doi_tac": "Partner",
+  "xoa_doi_tac_to_chuc": "Delete organization partner",
+  "xoa_doi_tac_ca_nhan": "Delete personal partner",
+  "them_doi_tac": "Add partner",
+  "nhap_email": "Enter email",
+  "nhap_ho_va_ten": "Enter full name",
+  "nhap_ten_doi_tac_to_chuc": "Enter name of organization partner...",
+  "valid_trung_email": "Emails cannot be duplicate between the parties involved!",
   "vui_long_nhap_ten": "Vui lòng nhập tên",
   "please_input_text_number_contract": "Please enter the text box / contract number!",
-  "to_chuc_of_toi": "tổ chức của tôi!",
-  "vui_long_nhap_email": "Vui lòng nhập email",
-  "vui_long_nhap_loai_ky": "Vui lòng chọn loại ký của",
-  "vui_long_chi_chon_1_loai_ky_so": "Vui lòng chỉ chọn 1 loại ký số của",
-  "vui_long_nhap_sdt": "Vui lòng nhập số điện thoại của",
-  "name": "Tên",
-  "email_of": "Email của",
-  "sdt_of": "Số điện thoại của",
-  "email_origanzation_note_duplicate": "Email tổ chức của tôi không được trùng nhau!",
-  "to_chuc_of_me_ko_hop_le": "tổ chức của tôi không hợp lệ!",
-  "valid_nhap_ten_dt_tc": "Vui lòng nhập tên của đối tác tổ chức!",
-  "of_doi_tac": " của đối tác!",
-  "of_doi_tac_ca_nhan": "của đối tác cá nhân!",
-  "doi_tac_ca_nhan_ko_hop_le": " đối tác cá nhân không hợp lệ!",
-  "doi_tac_ko_hop_le": " đối tác không hợp lệ!",
+  "to_chuc_of_toi": "My organization!",
+  "vui_long_nhap_email": "Choose email",
+  "vui_long_nhap_loai_ky": "Please choose type of sign",
+  "vui_long_chi_chon_1_loai_ky_so": "You only choose one of digital sign",
+  "vui_long_nhap_sdt": "Please enter phone",
+  "name": "Name",
+  "email_of": "Email of",
+  "sdt_of": "Phone of",
+  "email_origanzation_note_duplicate": "Emails cannot be duplicate between organizations!",
+  "to_chuc_of_me_ko_hop_le": "My organization not valid!",
+  "valid_nhap_ten_dt_tc": "Please enter name of organization partner!",
+  "of_doi_tac": " of partner!",
+  "of_doi_tac_ca_nhan": "of personal partner!",
+  "doi_tac_ca_nhan_ko_hop_le": " personal partner not valid!",
+  "doi_tac_ko_hop_le": " partner not valid!",
   "note_email_doi_tac": "Note: The dispatcher's email may match the email in the same organization!",
-  "email_partern_not_duplicate": "Email đối tác không được trùng nhau!",
+  "email_partern_not_duplicate": "Emails cannot be duplicate between the organization partner!",
   "have_version_app_mobile": "There is a mobile version available.",
   "please_openApp_or_download": "Please visit or download the application to continue using the service.",
   "open_app": "Open app",
@@ -369,9 +369,32 @@
   "notify_have_not_sign_acc": "You don't have a signed photo from your account!",
   "contract_processing_flow": "Contract processing flow",
   "not_search_file_attach": "Attached file not found, please check again!",
-  "typeOfSignEmail":"Đăng nhập bằng email",
-  "typeOfSignPhone":"Đăng nhập bằng số điện thoại",
-  "success_sign":"Ký hợp đồng thành công",
-  "success_watch":"Xem xét hợp đồng thành công",
-  "unit.id":"ID"
+  "typeOfSignEmail":"Login by email",
+  "typeOfSignPhone":"Login by phone",
+  "success_sign":"Success sign",
+  "success_watch":"Success watch",
+  "unit.id":"ID",
+  "my.contract":"My contract",
+  "org.contract":"Organization's contract",
+  "choose.contract":"Choose contract",
+  "choose.contract.type":"Choose type of contract",
+  "side":"Side",
+  "cancel":"Cancel",
+  "type_of_sign":"Type of sign",
+  "sign_by_token":"Sign by USB Token",
+  "sign_by_pki":"Sign by PKI",
+  "sign_by_hsm":"Sign by HSM",
+  "sign_by_eKYC":"Sign by eKYC",
+  "sign_by_otp":"Sign by OTP",
+  "sign.multi":"Sign multi",
+  "not.have.sample.file":"You don't have a sample file?",
+  "dowload.sample.file":"Download sample file",
+  "expire.date.contract":"Contract expiration date",
+  "enter.contract.no":"Enter contract code",
+  "enter.contract.name":"Enter contract name",
+  "choose.expire.date":"Choose expire date",
+  "tax_code.cardId":"Tax code/Card Id",
+  "info.token":"Information in USB Token",
+  "enter.taxt_code.cardId":"Enter tax code or card id",
+  "enter.tax.code":"Enter tax code"
 }
