--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -373,5 +373,28 @@
   "typeOfSignEmail":"Đăng nhập bằng email",
   "typeOfSignPhone":"Đăng nhập bằng số điện thoại",
   "success_sign":"Ký hợp đồng thành công",
-  "success_watch":"Xem xét hợp đồng thành công"
+  "success_watch":"Xem xét hợp đồng thành công",
+  "my.contract":"HĐ của tôi",
+  "org.contract":"HĐ của tổ chức",
+  "choose.contract":"Chọn hợp đồng",
+  "choose.contract.type":"Chọn loại hợp đồng",
+  "side":"Bên",
+  "cancel":"Huỷ",
+  "type_of_sign":"Loại ký",
+  "sign_by_token":"Ký số bằng USB Token",
+  "sign_by_pki":"Ký số bằng PKI",
+  "sign_by_hsm":"Ký số bằng HSM",
+  "sign_by_eKYC":"Ký bằng eKYC",
+  "sign_by_otp":"Ký ảnh vs OTP",
+  "sign.multi":"Ký nhiều",
+  "not.have.sample.file":"Bạn chưa có file mẫu?",
+  "dowload.sample.file":"Tải file mẫu",
+  "expire.date.contract":"Ngày hết hiệu lực hợp đồng",
+  "enter.contract.no":"Nhập số hợp đồng",
+  "enter.contract.name":"Nhập tên hợp đồng",
+  "choose.expire.date":"chọn ngày hết hạn",
+  "tax_code.cardId":"Mã số thuế/CMT/CCCD",
+  "info.token":"Thông tin trong USB Token",
+  "enter.taxt_code.cardId":"Nhập mã số thuế/CMT/CCCD",
+  "enter.tax.code":"Nhập mã số thuế"
 }
