--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -395,6 +395,10 @@
   "choose.expire.date":"chọn ngày hết hạn",
   "tax_code.cardId":"Mã số thuế/CMT/CCCD",
   "info.token":"Thông tin trong USB Token",
-  "enter.taxt_code.cardId":"Nhập mã số thuế/CMT/CCCD",
-  "enter.tax.code":"Nhập mã số thuế"
+  "enter.tax_code.cardId":"Nhập mã số thuế/CMT/CCCD",
+  "enter.tax.code":"Nhập mã số thuế",
+  "enter.cardId":"Nhập CMT/CCCD",
+  "cardId":"CMT/CCCD",
+  "enter.note":"Nhập lời nhắn",
+  "only.match.email.org":"Chỉ được trùng với email trong cùng tổ chức"
 }
