--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -388,7 +388,7 @@
   "sign_by_otp":"Ký ảnh vs OTP",
   "sign.multi":"Ký nhiều",
   "not.have.sample.file":"Bạn chưa có file mẫu?",
-  "dowload.sample.file":"Tải file mẫu",
+  "download.sample.file":"Tải file mẫu",
   "expire.date.contract":"Ngày hết hiệu lực hợp đồng",
   "enter.contract.no":"Nhập số hợp đồng",
   "enter.contract.name":"Nhập tên hợp đồng",
