--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -388,7 +388,7 @@
   "sign_by_otp":"Sign by OTP",
   "sign.multi":"Sign multi",
   "not.have.sample.file":"You don't have a sample file?",
-  "dowload.sample.file":"Download sample file",
+  "download.sample.file":"Download sample file",
   "expire.date.contract":"Contract expiration date",
   "enter.contract.no":"Enter contract code",
   "enter.contract.name":"Enter contract name",
