--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -402,5 +402,6 @@
   "enter.note":"Nhập lời nhắn",
   "only.match.email.org":"Chỉ được trùng với email trong cùng tổ chức",
   "parent.unit":"Tổ chức cha",
-  "child.unit":"Tổ chức con"
+  "child.unit":"Tổ chức con",
+  "receive.contract.process":"Nhận thông báo khi xử lý hợp đồng"
 }
