--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -403,5 +403,6 @@
   "only.match.email.org":"Chỉ được trùng với email trong cùng tổ chức",
   "parent.unit":"Tổ chức cha",
   "child.unit":"Tổ chức con",
-  "receive.contract.process":"Nhận thông báo khi xử lý hợp đồng"
+  "receive.contract.process":"Nhận thông báo khi xử lý hợp đồng",
+  "relate.party":"CÁC BÊN LIÊN QUAN"
 }
