thay đổi text tiếng anh

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -403,5 +403,6 @@
   "only.match.email.org":"Only match email in the same organization",
   "parent.unit":"Parent unit",
   "child.unit":"Children unit",
-  "receive.contract.process":"Receive notify when process contract"
+  "receive.contract.process":"Receive notify when process contract",
+  "all":"All"
 }
