--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -404,5 +404,6 @@
   "parent.unit":"Tổ chức cha",
   "child.unit":"Tổ chức con",
   "receive.contract.process":"Nhận thông báo khi xử lý hợp đồng",
-  "relate.party":"CÁC BÊN LIÊN QUAN"
+  "relate.party":"CÁC BÊN LIÊN QUAN",
+  "all":"Tất cả"
 }
